# g3

./: .gitignore  Cargo.toml  G3-test-ajay.crt  ICAP_INTEGRATION_SUMMARY.md  Makefile  README.md  SCRIPTS_README.md  ajay.csr  ajay.key  debug_reqmod_processing.py  docker-compose-influxdb.yml  docker-compose-monitoring.yml  g3  g3icap_minimal.yaml  icap_response_codes.md  influxdb-proxy.py  quick-start.sh  real_world_testing.sh  start-services.sh  test_204_compliance.py  test_content_filter_verification.py  test_content_filtering.py  test_debug_parsing.py  test_detailed_reqmod.py  test_facebook_reqmod.py  test_final_integration.py  test_g3proxy_direct.py  test_google_icap.py  test_google_simple.py  test_google_through_g3proxy.py  test_google_working.py  test_icap_communication.py  test_icap_corrected.py  test_icap_debug_detailed.py  test_icap_detailed.py  test_icap_final.py  test_icap_final_working.py  test_icap_integration_debug.py  test_icap_response_generator.py  test_offset_debug.py  (+4 more)
admin-console/: Dockerfile  IMPLEMENTATION_COMPLETE.md  PROXY_INTEGRATION_GUIDE.md  README.md  docker-compose.yml  g3statsd-config.yaml  package-lock.json  package.json  prometheus-metrics-server.py  send-real-metrics.py  test-apply-policies.js  test-crud-operations.md  test-dashboard.js  test-frontend-api.js  test-proxy-integration.js
admin-console/metrics-api/: Cargo.toml
admin-console/metrics-api/src/: main.rs
arcus-policy/: Cargo.toml
arcus-policy/src/: lib.rs
arcus-policy/src/config/: escaper.rs  generator.rs  mod.rs  user_group.rs
arcus-policy/src/engine/: context.rs  decision.rs  evaluator.rs  mod.rs
arcus-policy/src/policy/: manager.rs  mod.rs  schema.rs
config/: ICAP_INTEGRATION_GUIDE.md  README.md  ajay.crt  ajay_ca_config.yaml  g3icap_http2_compatible.yaml  g3icap_simple.yaml  g3proxy_icap_advanced.yaml  g3proxy_monitoring.yaml  g3proxy_no_icap.yaml  g3proxy_no_icap_test.yaml  (+3 more)
(+267 files in other folders)
