[package]
name = "arcus-policy"
version = "0.1.0"
edition = "2021"
authors = ["Arcus Team"]
description = "Arcus Policy Framework for G3 Secure Web Gateway"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# G3 ecosystem dependencies
g3-types = { path = "../lib/g3-types" }
g3-yaml = { path = "../lib/g3-yaml" }
g3-daemon = { path = "../lib/g3-daemon" }

# Policy framework specific
regex = "1.10"
url = "2.4"
ipnetwork = "0.20"
cidr-utils = "0.6"
schemars = "0.8"
jsonschema = "0.17"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client for integrations
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration management
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
